# demo_apply_ansible_to_container

./: README.md  docker-compose.yaml  pyproject.toml
ansible/: README.md  site.yml
ansible/inventory/: docker.yml
ansible/meta/: main.yml
ansible/tasks/: main.yml
ansible/templates/: localnet.zone.j2
