[project]
name = "demo-apply-ansible-to-container"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible-lint>=25.2.1",
    "ansible>=11.4.0",
    "requests>=2.32.3",
]

[tool.uv]
environments = ["platform_system != 'Windows'"]
